<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@mipmap/back_pic"
    android:id="@+id/login_back">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/linearlayout_style"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_name"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="15dp"
            android:hint="@string/name"
            android:textSize="17sp"
            android:maxLines="1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_password"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="15dp"
            android:hint="@string/password"
            android:textSize="17sp"
            android:inputType="textPassword"
            android:maxLines="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:text="@string/remember"
                android:textSize="17sp"
                android:id="@+id/remember_password"
                android:gravity="left|center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp">

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="15dp"
                android:layout_height="wrap_content"
                android:id="@+id/login"
                android:text="@string/login"
                android:textSize="17sp" />

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="20dp"
                android:layout_height="wrap_content"
                android:id="@+id/register"
                android:text="@string/register"
                android:textSize="17sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>